# flux_trajectoid

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: architecture.md  gallery.md  metrics.md  oam_screen_fidelity.md
examples/: analyze_oam_screen_fidelity.py  compare_phase_screens.py  create_seed.py  export_slm.py  propagate_seed.py  recover_seed.py  sweep_multiscale_fidelity.py
space/: README.md  app.py  demo_core.py  requirements.txt
space/flux_trajectoid/: __init__.py  photon_seed_asteroid.py
space/flux_trajectoid/inner/: __init__.py  vqc_encoder.py
space/flux_trajectoid/propagation/: __init__.py  screen_diagnostics.py
space/flux_trajectoid/recovery/: __init__.py  decoder.py  shell_identifier.py
space/flux_trajectoid/shell/: generator.py  mesh3d.py  modulator.py
space/flux_trajectoid/utils/: __init__.py  fourier_descriptors.py
src/flux_trajectoid/: __init__.py  photon_seed_asteroid.py
src/flux_trajectoid/export/: __init__.py  slm.py
src/flux_trajectoid/inner/: __init__.py  oam_backend.py  oam_flux_coupling.py  vqc_encoder.py
src/flux_trajectoid/propagation/: __init__.py  metrics.py  phase_screens.py  simulator.py
src/flux_trajectoid/recovery/: __init__.py  decoder.py
src/flux_trajectoid/shell/: __init__.py  generator.py  modulator.py
src/flux_trajectoid/utils/: __init__.py  quaternion_utils.py
tests/: test_photon_seed.py
