[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-trajectoid"
version = "0.1.0"
description = "Photon Seed Asteroids — Trajectoid shells + VQC quaternion + oam_flux helical lattice for robust photonic data carriers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kinaar8340" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/kinaar8340/flux_trajectoid"
Repository = "https://github.com/kinaar8340/flux_trajectoid"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
